2002-07-23  Duncan Mak  <duncan@ximian.com>

	* TestMenus.cs: Use MenuItem instead of ImageMenuItem, this test
	works now.

	* TestFileSelection.cs: window.Selections is crashing, remove
	it. OK Button doesn't do anything now.

	* WidgetViewer.cs: Add in a frame.

2002-07-20  Duncan Mak  <duncan@ximian.com>

	* TestSizeGroup.cs: Minor aesthetic changes.

	* TestStatusbar.cs: Some changes in the output to figure out why
	it is behaving like this.

2002-07-19  Duncan Mak  <duncan@ximian.com>
	
	* TestSizeGroup.cs: New test for GtkSizeGroup.

	* Makefile: 
	* WidgetViewer.cs: Include TestSizeGroup.

2002-07-18  Duncan Mak  <duncan@ximian.com>

	* WidgetViewer.cs: Fixed InvalidCastException.

	* TestStatusbar.cs: Made it work. Sigh, I dunno why I got it wrong
	the first time.

	* TestMenus.cs: Use null instead of new SList (IntPtr.Zero); and
	remove the unnecessary try... catch block.

2002-07-18  Duncan Mak  <duncan@ximian.com>

	* TestCheckButton.cs: 
	* TestDialog.cs: 
	* TestFileSelection.cs: 
	* TestFlipping.cs: 
	* TestMenus.cs: 
	* TestRadioButton.cs: 
	* TestRange.cs: 
	* TestStatusbar.cs: 
	* TestTooltip.cs:  Removed erroneous references to SignalArgs, and
	changed EventHandlers to more appropriate specialized Handlers instead.

2002-07-17  Duncan Mak  <duncan@ximian.com>

	* Makefile: 
	* WidgetViewer.cs: Added TestMenus.cs

	* TestMenus.cs: New test for testing menu widgets.

2002-07-17  Duncan Mak  <duncan@ximian.com>

	* WidgetViewer.cs: Changed the EventArgs stuff to match Mike's
	latest commit.

	* TestToolbar.cs: Thanks to Dietmar for fixing #27695. Added new
	button for toggling showing tooltips.

2002-07-16  Duncan Mak  <duncan@ximian.com>

	* TestCheckButton.cs:
	* TestTooltip.cs: Added copyright material.

	* TestColorSelection.cs: Attempt to do something new after color
	is selected. ColorSelection.CurrentColor (get) doesn't seem to
	work right now, bug 27834.

	* TestDialog.cs: Removed debugging messages and beautified the dialog.
