@@ -1,3 +1,7 @@
+2002-07-25  Duncan Mak  <duncan@ximian.com>
+
+	* TestRange.cs: Fix the EventHandlers here.
+
 2002-07-23  Duncan Mak  <duncan@ximian.com>
 
 	* TestMenus.cs: Use MenuItem instead of ImageMenuItem, this test
